[package]
name = "rom_cache"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
keywords = ["cache", "storage"]

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = { version = "1.0" }

[features]
default = []
nightly = []
