[package]
name = "rom_cache"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
keywords = ["cache", "storage"]

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]
thiserror = { version = "1.0" }
loom = { workspace = true, optional = true }

[features]
default = []
nightly = []
loom = ["dep:loom"]
