[package]
name = "tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
rom_cache = { path = "../rom-cache" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[target.'cfg(loom)'.dependencies]
loom = { workspace = true }

[[test]]
name = "loom_test"
path = "loom_test.rs"
required-features = ["nightly"]

[features]
default = []
nightly = ["rom_cache/nightly"]
